fixed overflow issue

--- a/css/admin.css
+++ b/css/admin.css
@@ -1,3 +1,9 @@
 h2 {
     font-weight: bold;
 }
+
+.has-table {
+    overflow: auto;
+    margin-bottom: 50px;
+    padding: 0;
+}
